Removed dozens of Code smells & ADDED Tests for authentication-service